--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,5 @@ deploy:
     tags: true
   edge: true
   distributions: "sdist bdist_wheel"
-script:
-  - python -m unittest discover
-  - python setup.py sdist bdist_wheel
+script: python -m unittest discover
+after_script: python setup.py sdist bdist_wheel
