--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ deploy:
   distributions: "sdist bdist_wheel"
 script: python -m unittest -v 
 before_deploy: python setup.py sdist bdist_wheel
-after_success: bash <(curl -s https://codecov.io/bash
+after_success: bash <(curl -s https://codecov.io/bash)
