--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ deploy:
     tags: true
   edge: true
   distributions: "sdist bdist_wheel"
-script: coverage run -m unittest -v 
+script: coverage run --omit="*/test*" -m unittest -v 
 before_deploy: python setup.py sdist bdist_wheel
 after_success: bash <(curl -s https://codecov.io/bash)
