--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,8 +11,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install wheel
+          python -m pip install build
           pip install -r requirements.txt
-      - name: Test with pytest
-        run: |
-          coverage run --omit="*/test*" -m unittest -v
-      - uses: codecov/codecov-action@v3
+      - name: Test with unittest
+        run: coverage run --omit="*/test*" -m unittest -v
+      - name: Upload Coverage to codecov
+        uses: codecov/codecov-action@v3
+      - name: Publish distribution 📦 to PyPI
+        if: startsWith(github.ref, 'refs/tags')
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          password: ${{ secrets.PYPI_API_TOKEN }}
