--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,8 @@ jobs:
         run: coverage run --omit="*/test*" -m unittest -v
       - name: Upload Coverage to codecov
         uses: codecov/codecov-action@v3
-      - name: Build package
+      - name: Build 📦
+        if: startsWith(github.ref, 'refs/tags')
         run: python -m build
       - name: Publish distribution 📦 to PyPI
         if: startsWith(github.ref, 'refs/tags')
